--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="The Escape, Dice, Game">
         <meta name="author" content="Raymond Johannessen, Raymond Johannessen Webutvikling">
         <title>The Escape</title>
+        <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
