The game is done and ready to be published

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="robots" content="index, follow">
-        <meta name="description" content="The Escape. A two player dice game">
-        <meta name="keywords" content="The Escape, Dice, Game">
-        <meta name="author" content="Raymond Johannessen, Raymond Johannessen Webutvikling">
+        <meta name="robots" content="index, follow" />
+        <meta name="description" content="The Escape. A two player dice game" />
+        <meta name="keywords" content="The Escape, Dice, Game" />
+        <meta name="author" content="Raymond Johannessen, Raymond Johannessen Webutvikling" />
         <title>The Escape</title>
-        <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Girassol:wght@700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet" />
     </head>
     <body>
         <div id="root"></div>
